[package]
name = "ksu_tool"
version = "0.1.0"
authors = ["Daniel Markow <daniel.markow@volkswagen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
prettytable-rs = "^0.8"
timeago = "0.2.0"
regex = "1.2.1"
clap = "2.33.0"